compiler/testData/diagnostics/tests/PrimaryConstructors.jet

class X {
  val <!MUST_BE_INITIALIZED_OR_BE_ABSTRACT!>x<!> : Int
}

open class Y() {
  val x : Int = 2
}

class Y1 {
  val x : Int get() = 1
}

class Z : Y() {
}

//KT-650 Prohibit creating class without constructor.

class MyIterable<T> : Iterable<T>
{
    public override fun iterator(): Iterator<T>  = MyIterator()

    class MyIterator : Iterator<T>
    {
        public override val hasNext: Boolean = false
        public override fun next(): T {
            throw UnsupportedOperationException()
        }
    }
}
